grammars/mysql/grammar.js
    source_file: $ => seq(
      repeat(choice(seq($._top_statement, ';'), ';')),
      optional($._top_statement),
    ),

    // BEGIN starts a transaction only outside a stored program. Inside one,
    // it starts a block.
    _top_statement: $ => choice(
      $._statement,
      alias($._begin_work, $.start_transaction_statement),
    ),

    select_statement: $ => $._query_expression,

    _query_expression: $ => seq(
      optional($.with_clause),
      $._query_body,
      optional($.order_by_clause),
      optional($.limit_clause),
      repeat(choice($.into_clause, $.locking_clause)),
    ),

    select: $ => prec.right(seq(
      kw('SELECT'),
      repeat($._select_modifier),
      commaSep1($._select_item),
      optional($.into_clause),
      optional($.from_clause),
      optional($.where_clause),
      optional($.group_by_clause),
      optional($.having_clause),
      optional($.window_clause),
    )),

    _select_modifier: _ => choice(
      kw('ALL'),
      kw('DISTINCT'),
      kw('DISTINCTROW'),
      kw('HIGH_PRIORITY'),
      kw('STRAIGHT_JOIN'),
      kw('SQL_SMALL_RESULT'),
      kw('SQL_BIG_RESULT'),
      kw('SQL_BUFFER_RESULT'),
      kw('SQL_NO_CACHE'),
      kw('SQL_CALC_FOUND_ROWS'),
    ),

    _select_item: $ => choice(
      $._expression,
      $.aliased_expression,
      $.all_columns,
    ),

    aliased_expression: $ => seq(
      field('value', $._expression),
      optional(kw('AS')),
      field('alias', choice($.identifier, $.string)),
    ),

    all_columns: $ => seq(
      optional(seq(
        optional(seq(field('schema', $.identifier), '.')),
        field('table', $.identifier),
        '.',
      )),
      '*',
    ),

    _character_set: $ => seq(
      choice(kws('CHARACTER', 'SET'), kw('CHARSET')),
      field('charset', $._charset_name),
    ),

    _charset_name: $ => choice($.identifier, $.string, kw('BINARY')),

    from_clause: $ => seq(
      kw('FROM'),
      choice(kw('DUAL'), commaSep1($._table_reference)),
    ),

    _table_reference: $ => choice(
      $.table_reference,
      $.derived_table,
      $.join,
      parens(commaSep1($._table_reference)),
    ),

    table_reference: $ => prec.right(seq(
      optional(seq(field('schema', $.identifier), '.')),
      field('name', $.identifier),
      optional($.partition_list),
      optional(seq(optional(kw('AS')), field('alias', $.identifier))),
      repeat($.index_hint),
    )),

    where_clause: $ => seq(kw('WHERE'), $._expression),

    order_by_clause: $ => seq(
      kws('ORDER', 'BY'),
      commaSep1(seq($._expression, optional(choice(kw('ASC'), kw('DESC'))))),
    ),

    insert_statement: $ => seq(
      kw('INSERT'),
      repeat(choice(kw('LOW_PRIORITY'), kw('DELAYED'), kw('HIGH_PRIORITY'), kw('IGNORE'))),
      ...insertBody($),
      optional($.on_duplicate_key_update),
    ),

    values_clause: $ => seq(
      choice(kw('VALUES'), kw('VALUE')),
      commaSep1($.value_list),
    ),

    value_list: $ => seq(
      optional(kw('ROW')),
      parens(optional(commaSep1(choice($._expression, kw('DEFAULT'))))),
    ),

    _if_exists: _ => kws('IF', 'EXISTS'),

    _if_not_exists: _ => kws('IF', 'NOT', 'EXISTS'),

    // Tables

    create_table_statement: $ => seq(
      kw('CREATE'),
      optional(kw('TEMPORARY')),
      kw('TABLE'),
      optional($._if_not_exists),
      field('name', $.object_reference),
      choice(
        seq(kw('LIKE'), field('like', $.object_reference)),
        parens(seq(kw('LIKE'), field('like', $.object_reference))),
        seq(
          optional(parens(commaSep1($._table_element))),
          optional($._table_options),
          optional($.partition_by),
          optional(seq(
            optional(choice(kw('IGNORE'), kw('REPLACE'))),
            optional(kw('AS')),
            $.select_statement,
          )),
        ),
      ),
    ),

    _table_element: $ => choice(
      $.column_definition,
      $.index_definition,
      $.table_constraint,
    ),

    column_definition: $ => seq(
      field('name', $.identifier),
      field('type', $.data_type),
      repeat($._column_attribute),
    ),

    _column_attribute: $ => choice(
      seq(optional(kw('NOT')), kw('NULL')),
      seq(kw('DEFAULT'), field('default', $._default_value)),
      seq(kws('ON', 'UPDATE'), field('on_update', $.function_call)),
      kw('AUTO_INCREMENT'),
      prec.right(seq(kw('UNIQUE'), optional(kw('KEY')))),
      seq(optional(kw('PRIMARY')), kw('KEY')),
      seq(kw('COMMENT'), field('comment', $.string)),
      seq(kw('COLUMN_FORMAT'), choice(kw('FIXED'), kw('DYNAMIC'), kw('DEFAULT'))),
      seq(kw('STORAGE'), choice(kw('DISK'), kw('MEMORY'))),
      kw('VISIBLE'),
      kw('INVISIBLE'),
      seq(kw('SRID'), $.number),
      seq(kws('SERIAL', 'DEFAULT', 'VALUE')),
      seq(
        optional(kws('GENERATED', 'ALWAYS')),
        kw('AS'),
        parens(field('generated', $._expression)),
        optional(choice(kw('VIRTUAL'), kw('STORED'))),
      ),
      $.references_clause,
      seq(
        optional(seq(kw('CONSTRAINT'), optional(field('constraint', $.identifier)))),
        $.check_constraint,
      ),
    ),

    // The manual allows a literal, an expression in parentheses or a
    // function such as CURRENT_TIMESTAMP after DEFAULT. A bare expression
    // would make NOT NULL after it ambiguous.
    data_type: $ => prec.right(seq(
      $.type_name,
      optional(parens(commaSep1(choice($.number, $.string)))),
      repeat(choice(
        kw('UNSIGNED'),
        kw('SIGNED'),
        kw('ZEROFILL'),
        kw('BINARY'),
        kw('ARRAY'),
        $._character_set,
        seq(kw('COLLATE'), field('collation', choice($.identifier, $.string))),
      )),
    )),

    type_name: _ => choice(
      kw('TINYINT'),
      kw('SMALLINT'),
      kw('MEDIUMINT'),
      kw('INT'),
      kw('INTEGER'),
      kw('BIGINT'),
      kw('INT1'),
      kw('INT2'),
      kw('INT3'),
      kw('INT4'),
      kw('INT8'),
      kw('DECIMAL'),
      kw('DEC'),
      kw('NUMERIC'),
      kw('FIXED'),
      kw('FLOAT'),
      seq(kw('DOUBLE'), optional(kw('PRECISION'))),
      kw('REAL'),
      kw('BIT'),
      kw('BOOL'),
      kw('BOOLEAN'),
      kw('SERIAL'),
      kw('DATE'),
      kw('DATETIME'),
      kw('TIMESTAMP'),
      kw('TIME'),
      kw('YEAR'),
      seq(optional(kw('NATIONAL')), kw('CHAR'), optional(kw('VARYING'))),
      seq(optional(kw('NATIONAL')), kw('CHARACTER'), optional(kw('VARYING'))),
      kw('NCHAR'),
      seq(optional(kw('NATIONAL')), kw('VARCHAR')),
      kw('NVARCHAR'),
      kw('VARCHARACTER'),
      kw('BINARY'),
      kw('VARBINARY'),
      kw('TINYBLOB'),
      kw('BLOB'),
      kw('MEDIUMBLOB'),
      kw('LONGBLOB'),
      kw('TINYTEXT'),
      kw('TEXT'),
      kw('MEDIUMTEXT'),
      kw('LONGTEXT'),
      kw('ENUM'),
      kw('SET'),
      kw('JSON'),
      kw('GEOMETRY'),
      kw('POINT'),
      kw('LINESTRING'),
      kw('POLYGON'),
      kw('MULTIPOINT'),
      kw('MULTILINESTRING'),
      kw('MULTIPOLYGON'),
      kw('GEOMETRYCOLLECTION'),
      kw('SIGNED'),
      kw('UNSIGNED'),
    ),

    table_constraint: $ => seq(
      optional(seq(kw('CONSTRAINT'), optional(field('name', $.identifier)))),
      choice(
        seq(
          kws('PRIMARY', 'KEY'),
          optional($._index_type),
          $.key_parts,
          repeat($._index_option),
        ),
        seq(
          kw('UNIQUE'),
          optional(choice(kw('INDEX'), kw('KEY'))),
          optional(field('index', $.identifier)),
          optional($._index_type),
          $.key_parts,
          repeat($._index_option),
        ),
        seq(
          kws('FOREIGN', 'KEY'),
          optional(field('index', $.identifier)),
          $.column_list,
          $.references_clause,
        ),
        $.check_constraint,
      ),
    ),

    key_parts: $ => parens(commaSep1($.key_part)),

    key_part: $ => seq(
      choice(
        seq(field('column', $.identifier), optional(parens(field('length', $.number)))),
        parens(field('expression', $._expression)),
      ),
      optional(choice(kw('ASC'), kw('DESC'))),
    ),

    _index_type: _ => seq(kw('USING'), choice(kw('BTREE'), kw('HASH'))),

    _index_option: $ => choice(
      seq(kw('KEY_BLOCK_SIZE'), optional('='), $.number),
      $._index_type,
      seq(kws('WITH', 'PARSER'), $.identifier),
      seq(kw('COMMENT'), $.string),
      kw('VISIBLE'),
      kw('INVISIBLE'),
    ),

    _table_options: $ => seq(
      $.table_option,
      repeat(seq(optional(','), $.table_option)),
    ),

    table_option: $ => choice(
      seq(
        optional(kw('DEFAULT')),
        choice(kws('CHARACTER', 'SET'), kw('CHARSET')),
        optional('='),
        field('value', choice($._charset_name, kw('DEFAULT'))),
      ),
      seq(
        optional(kw('DEFAULT')),
        kw('COLLATE'),
        optional('='),
        field('value', choice($.identifier, $.string, kw('DEFAULT'))),
      ),
      seq(
        field('name', choice(
          kw('ENGINE'),
          kw('AUTO_INCREMENT'),
          kw('AVG_ROW_LENGTH'),
          kw('CHECKSUM'),
          kw('COMMENT'),
          kw('COMPRESSION'),
          kw('CONNECTION'),
          kws('DATA', 'DIRECTORY'),
          kws('INDEX', 'DIRECTORY'),
          kw('DELAY_KEY_WRITE'),
          kw('ENCRYPTION'),
          kw('INSERT_METHOD'),
          kw('KEY_BLOCK_SIZE'),
          kw('MAX_ROWS'),
          kw('MIN_ROWS'),
          kw('PACK_KEYS'),
          kw('PASSWORD'),
          kw('ROW_FORMAT'),
          kw('STATS_AUTO_RECALC'),
          kw('STATS_PERSISTENT'),
          kw('STATS_SAMPLE_PAGES'),
          kw('TABLESPACE'),
        )),
        optional('='),
        field('value', choice($.identifier, $.string, $.number, kw('DEFAULT'))),
      ),
      seq(kw('UNION'), optional('='), parens(commaSep1($.object_reference))),
    ),

    alter_table_statement: $ => seq(
      kw('ALTER'),
      kw('TABLE'),
      field('name', $.object_reference),
      optional(commaSep1($._alter_specification)),
      optional($.partition_by),
    ),

    _alter_specification: $ => choice(
      $.add_column,
      $.add_constraint,
      $.drop_column,
      $.drop_constraint,
      $.modify_column,
      $.change_column,
      $.rename_column,
      $.rename_index,
      $.rename_table,
      $.alter_column,
      $.alter_index,
      $.convert_to_charset,
      $.alter_option,
      $.table_option,
    ),

    alter_option: $ => choice(
      seq(kw('ALGORITHM'), optional('='), field('value', choice($.identifier, kw('DEFAULT')))),
      seq(kw('LOCK'), optional('='), field('value', choice($.identifier, kw('DEFAULT')))),
      kw('FORCE'),
      seq(choice(kw('ENABLE'), kw('DISABLE')), kw('KEYS')),
      prec.right(seq(kws('ORDER', 'BY'), commaSep1($.identifier))),
    ),

    drop_table_statement: $ => seq(
      kw('DROP'),
      optional(kw('TEMPORARY')),
      choice(kw('TABLE'), kw('TABLES')),
      optional($._if_exists),
      commaSep1($.object_reference),
      optional(choice(kw('RESTRICT'), kw('CASCADE'))),
    ),

    set_statement: $ => seq(
      kw('SET'),
      choice(
        commaSep1($.variable_assignment),
        seq(
          kw('NAMES'),
          choice(
            seq($._charset_name, optional(seq(kw('COLLATE'), choice($.identifier, $.string)))),
            kw('DEFAULT'),
          ),
        ),
        seq(choice(kws('CHARACTER', 'SET'), kw('CHARSET')), choice($._charset_name, kw('DEFAULT'))),
        seq(
          optional($._variable_scope),
          kw('TRANSACTION'),
          commaSep1($._transaction_characteristic),
        ),
        seq(
          kw('PASSWORD'),
          optional(seq(kw('FOR'), $.account)),
          '=',
          $.string,
        ),
      ),
    ),

    _variable_scope: _ => choice(
      kw('GLOBAL'),
      kw('SESSION'),
      kw('LOCAL'),
      kw('PERSIST'),
      kw('PERSIST_ONLY'),
    ),

    variable_assignment: $ => seq(
      choice(
        seq(optional($._variable_scope), field('left', $.column_reference)),
        field('left', choice($.user_variable, $.system_variable)),
      ),
      choice('=', ':='),
      field('right', choice($._expression, kw('DEFAULT'), kw('ON'), kw('ALL'))),
    ),

    _transaction_characteristic: _ => choice(
      seq(
        kws('ISOLATION', 'LEVEL'),
        choice(
          kws('REPEATABLE', 'READ'),
          kws('READ', 'COMMITTED'),
          kws('READ', 'UNCOMMITTED'),
          kw('SERIALIZABLE'),
        ),
      ),
      kws('READ', 'WRITE'),
      kws('READ', 'ONLY'),
    ),

    lock_tables_statement: $ => seq(
      kw('LOCK'),
      choice(kw('TABLE'), kw('TABLES')),
      commaSep1($.table_lock),
    ),

    table_lock: $ => seq(
      field('table', $.object_reference),
      optional(seq(optional(kw('AS')), field('alias', $.identifier))),
      choice(
        seq(kw('READ'), optional(kw('LOCAL'))),
        seq(optional(kw('LOW_PRIORITY')), kw('WRITE')),
      ),
    ),

    unlock_tables_statement: _ => seq(kw('UNLOCK'), choice(kw('TABLE'), kw('TABLES'))),

    _expression: $ => choice(
      $._primary_expression,
      $.unary_expression,
      $.binary_expression,
      $.is_expression,
      $.in_expression,
      $.between_expression,
      $.like_expression,
      $.collate_expression,
      $.assignment_expression,
    ),

    boolean: _ => choice(kw('TRUE'), kw('FALSE')),

    null: _ => kw('NULL'),

    // DATE, TIME and TIMESTAMP before a string give a literal of the type.
    column_reference: $ => choice(
      field('name', choice($.identifier, $._keyword_name)),
      seq(field('table', $.identifier), '.', field('name', $.identifier)),
      seq(
        field('schema', $.identifier),
        '.',
        field('table', $.identifier),
        '.',
        field('name', $.identifier),
      ),
    ),

    // These keywords start an expression, and MySQL does not reserve them,
    // so they also name a column.
    _keyword_name: $ => keywordName(
      $,
      'DATE',
      'TIME',
      'TIMESTAMP',
      'POSITION',
      'TRIM',
      'SUBSTRING',
      'SUBSTR',
      'EXTRACT',
      'CAST',
    ),

    unary_expression: $ => choice(
      prec(PREC.not, seq(field('operator', kw('NOT')), field('operand', $._expression))),
      prec(PREC.bang, seq(field('operator', '!'), field('operand', $._expression))),
      prec(PREC.unary, seq(field('operator', choice('-', '+', '~')), field('operand', $._expression))),
      prec.left(PREC.collate, seq(field('operator', kw('BINARY')), field('operand', $._expression))),
    ),

    binary_expression: $ => {
      /** @type {[number, RuleOrLiteral][]} */
      const table = [
        [PREC.or, choice('||', kw('OR'))],
        [PREC.xor, kw('XOR')],
        [PREC.and, choice('&&', kw('AND'))],
        [PREC.bitor, '|'],
        [PREC.bitand, '&'],
        [PREC.shift, choice('<<', '>>')],
        [PREC.add, choice('+', '-')],
        [PREC.multiply, choice('*', '/', '%', kw('DIV'), kw('MOD'))],
        [PREC.bitxor, '^'],
        [PREC.json, choice('->', '->>')],
      ];
      return choice(
        ...table.map(([p, op]) => prec.left(p, seq(
          field('left', $._expression),
          field('operator', op),
          field('right', $._expression),
        ))),
        prec.left(PREC.compare, seq(
          field('left', $._expression),
          field('operator', choice('=', '<=>', '>=', '>', '<=', '<', '<>', '!=')),
          field('right', choice($._expression, $.quantified_subquery)),
        )),
        prec.left(PREC.compare, seq(
          field('left', $._expression),
          field('operator', seq(kw('MEMBER'), optional(kw('OF')))),
          field('right', $.parenthesized_expression),
        )),
      );
    },

    object_reference: $ => seq(
      optional(seq(field('schema', $.identifier), '.')),
      field('name', $.identifier),
    ),

    identifier: $ => choice($._identifier, $._quoted_identifier),

    _identifier: _ => /[A-Za-z_\u0080-￿][A-Za-z0-9_$\u0080-￿]*/,
